# BSOL

./: README.md
config/client/: Makefile  net.sh  net2.sh
config/server/: Makefile  rt_tables  setupnet.sh  wl_forward.sh
dev/: cl.tgz
dev/com.workspaceafrica.bsol/: .cproject  .project  Makefile  SPClient  auth.c  conf_parse.c  conf_parse.h  config.h  config.status  lib.c  linkfd.c  linkfd.h  main.c  netlib.c  netlib.h  tunnel.c  vtun.h  vtund_client.conf
dev/com.workspaceafrica.bsol/generic/: udp_proto.c
onms-config/: Makefile  TODO  cleandb.sh  createCollect.pl  createProvision.pl  createReports.pl  deleteall.sh  install.sh  reports.dat~
onms-config/configFiles/: collectd-configuration.xml  database-reports.xml  jasper-reports.xml  opennms.properties  poll-outages.xml  snmp-config.xml
onms-config/configFiles/datacollection/: spider.xml
onms-config/configFiles/report-templates/: Multiple.jasper  Multiple.jrxml  Multiple_2GHz.jasper  Multiple_2GHz.jrxml  Perc_loss.jasper  Perc_loss.jrxml  Perc_loss_hi.jasper  blank.jrxml  (+4 more)
onms-config/configTemplates/: collectd-configuration.xml  database-reports.xml  datacollection-config.xml  jasper-reports.xml  opennms.properties  reportd-configuration.xml  rrd-configuration.properties  snmp-config.xml  surveillance-views.xml
onms-config/upload/: network.xml
preshane/template/: Makefile  background-project.tex  costing-project.tex.bak  criteria.tex  exec-project.tex  glossary.tex  legal.tex  proposalsp.cls  structure-project.tex  title.tex
sp/com.dsleng.libsptun/: .autotools  .cproject  .project  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.ac  libtool  runclient  runserver
sp/com.dsleng.libsptun/SPClient/: Makefile  Makefile.am  Makefile.in  SPClient.c
sp/com.dsleng.libsptun/SPClient/.deps/: SPClient-SPClient.Po
sp/com.dsleng.libsptun/SPServer/: Makefile  Makefile.am  Makefile.in  SPServer.c
sp/com.dsleng.libsptun/SPServer/.deps/: SPServer-SPServer.Po
sp/com.dsleng.libsptun/libsptun/: Makefile  Makefile.am  Makefile.in  auth.c  cfg_file.tab.c  client.c  lex.yy.c  lfd_encrypt.c  lfd_legacy_encrypt.c  lfd_lzo.c  lfd_shaper.c  lfd_zlib.c  lib.c  lib.h  libsptun.c  linkfd.c  llist.c  lock.c  main.c  netlib.c  netlib.h  pipe_dev.c  pty_dev.c  server.c  spinfo.c  tcp_proto.c  tun_dev.c  tunnel.c  udp_proto.c
sp/com.dsleng.libsptun/libsptun/.deps/: libsptun_la-auth.Plo  libsptun_la-cfg_file.lex.Plo  libsptun_la-cfg_file.tab.Plo  libsptun_la-client.Plo  libsptun_la-lex.yy.Plo  libsptun_la-lfd_encrypt.Plo  libsptun_la-lfd_legacy_encrypt.Plo  libsptun_la-lfd_lzo.Plo  libsptun_la-lfd_shaper.Plo  libsptun_la-lfd_zlib.Plo  libsptun_la-lib.Plo  libsptun_la-libsptun.Plo  libsptun_la-linkfd.Plo  libsptun_la-llist.Plo  libsptun_la-lock.Plo  libsptun_la-main.Plo  libsptun_la-netlib.Plo  libsptun_la-pipe_dev.Plo  libsptun_la-pty_dev.Plo  libsptun_la-server.Plo  libsptun_la-spinfo.Plo  libsptun_la-tap_dev.Plo  libsptun_la-tcp_proto.Plo  libsptun_la-tun_dev.Plo  libsptun_la-tunnel.Plo  libsptun_la-udp_proto.Plo
sp/com.workspaceafrica.bsol.client/: .cproject  .project  Makefile
sp/com.workspaceafrica.bsol.shared/: .cproject  .project  Makefile  Makefile.inc
sp/com.workspaceafrica.bsol.spvtun/: .autotools  .cproject  .project  Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac  libtool
sp/com.workspaceafrica.bsol.spvtun/src/main/c/: Makefile  Makefile.am  Makefile.in  cfg_file.lex.c  cfg_file.tab.c  cfg_file.tab.h  client  lfd_lzo.c  linkfd.h
sp/com.workspaceafrica.bsol.spvtun/src/main/c/.deps/: auth.Plo  auth.Po  cfg_file.lex.Plo  cfg_file.lex.Po  cfg_file.tab.Plo  cfg_file.tab.Po  client.Plo  client.Po  lfd_encrypt.Plo  lfd_encrypt.Po  lfd_legacy_encrypt.Plo  lfd_legacy_encrypt.Po  lfd_lzo.Plo  lfd_lzo.Po  lfd_shaper.Plo  lfd_shaper.Po  lfd_zlib.Plo  lfd_zlib.Po  lib.Plo  lib.Po  linkfd.Plo  linkfd.Po  llist.Plo  llist.Po  lock.Plo  lock.Po  main.Plo  main.Po  netlib.Plo  netlib.Po  pipe_dev.Plo  pipe_dev.Po  pty_dev.Plo  pty_dev.Po  server.Plo  server.Po  tap_dev.Plo  tap_dev.Po  tcp_proto.Plo  tcp_proto.Po  (+6 more)
sp/template/: acceptance.tex  background-project.tex.bak  costing-project.tex  nda.tex  plan-project.tex  proposal.tex  proposal.toc  scope-project.tex
(+45 files in other folders)
